# indelMaP

./: .gitignore  Dockerfile  README.md  pyproject.toml
Indel Pattern Analysis of the HIV-1 Envelope Protein gp120/: HIV_indel_analysis.py
Indel Pattern Analysis of the HIV-1 Envelope Protein gp120/data/: ancestral_env_aa_one_seq_pP_subtypeB_tree.nwk  date_file_env.txt  evolutionary_rates.csv  initial_msa_env_aa_one_seq_pP_subtypeB.fas.timetree.nwk  initial_msa_env_aa_one_seq_pP_subtypeB.fas.treefile  tree_env_aa.timetree.nwk  tree_env_aa_root.timetree.nwk
benchmark/inderate_0.01/: indel_rate
example/: HIV_indel_func.py
example/data/: bioNJ_env_aa_one_seq_pP_subtypeB.nwk  eu_env_aa_one_seq_pP.fasta  initial_msa_env_aa_one_seq_pP_subtypeB.fas.iqtree  initial_msa_env_aa_one_seq_pP_subtypeB.fas.timetree.lsd  initial_msa_env_aa_one_seq_pP_subtypeB.fas.timetree.nex
gp120-indel-pattern-analysis/data/: accession_file.txt  indel_lengths.csv  msa_env.fas.timetree.nwk  seq_env_subtypeB.fas  seq_env_subtypeB_not_ambiguous.fas
src/: HelperFunctions.py  InitalizeSetsAndAlignment.py  ParsASR.py  ParsAlign.py  ParsScore.py  ParsScore5.py  ParsScoreMD.py  RateMatrix.py  calculateC.py  indelMaP_ASR.py  indelMaP_MSA.py
src/indelmap/: HelperFunctions.py  __init__.py  indelMaP_ASR.py  indelMaP_MSA.py
